--- a/Rectangle/.classpath
+++ b/Rectangle/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="D:/COSC 603/Projects/Project 4/junit-4.8.1.jar"/>
+	<classpathentry kind="lib" path="junit-4.8.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
